	(AudioMastering.add_file), (AudioMastering.add_files):
	Uses ErrorTrapper.

	* audio.py:
	(AudioMetadata):
	Now returns the correct operation success value.
	
	* serpentine_shell.py:
	Removed the file dialog title for HIG compliance.
	
	* gtk_util.py:
	New function to show error dialogs: dialog_error
	(hig_alert):
	Removed title and corrected image alignment for HIG compliance.
	
	* operations.py:
	(OperationsQueue):
	Adds support for queues that do not abort on an operation error.

2004-12-21 Tiago Cogumbreiro <cogumbreiro@users.sf.net>
	* serpentine_shell.py:
	(MainWindow.__init__):
	Handle systems which do not have recorder devices.
	Do not set the default device on DriveSelection (this is done internally).
	Update speed widget explicitly.
	
	* preferences.py:
	(RecordingPreferences.__update_speed):
	When user does not have a device turn the speed widget insensitive.
	
	* converting.py:
	unique_music_id was moved up to GstMusicPool and corrected, since it was
	not working correctly.
	
	* gnome_util.py:
	Corrected a typo bug.
	
	* audio.py:
	(GstOperation.__on_error):
	Only remove source if it is defined, since sometimes it happens.
	
	* mastering.py:
	Started adding reordering code but postponed because of pygtk bug.
	
2004-12-20 Tiago Cogumbreiro <cogumbreiro@users.sf.net>

	* preferences.py:
	Centralized pool inside RecordingPreferences
	
	* gnome_util.py:
	Made unsescape_uri a bit more correct, but with the same pratical results.
	
	* serpentine_shell.py:
	Updated the pool to use it from RecordingPreferences.
	Explicitly clears cache on exit.
	
	* converting.py:
	(GstSourceToWavListener.on_finished):
	Corrected a bug where it would put an element on cache even when it wasn't
	a successfull covertion. Also removes temporary files upon failure.
	(GvfsMusicPool.__unique_uri):
	Generates a unique string from an URI.
	(GvfsMusicPool.is_available), (GvfsMusicPool.get_filename),
	(GvfsMusicPool.fetch_music):
	Musics are passed through __unique_uri.